--- a/grade.css
+++ b/grade.css
@@ -12,9 +12,9 @@ body {
 .container {
   max-width: 1400px;
   margin: auto;
-  background:#7f96a9;
-  padding: 2px;
-  border-radius: 10px;
+  background: #7f96a9;
+  padding: 1px;
+  border-radius: 14px;
   box-shadow: 0 10px 28px rgba(0, 0, 0, 0.18);
 }
 
@@ -24,8 +24,8 @@ body {
   text-align: center;
   font-weight: bold;
   font-size: 20px;
-  border-radius: 10px;
-  padding: 15px;
+  padding: 14px;
+  border-radius: 5px;
 }
 
 .fundo-topo {
@@ -115,16 +115,16 @@ td[contenteditable]:focus {
 
 /* ===== BOTÕES ===== */
 .botoes {
-  margin-top: 20px;
+  margin: 15px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: right;
 }
 
 button {
-  padding: 10px 24px;
+  padding: 10px 20px;
   border-radius: 10px;
   border: none;
-  background-color: #33762d;
+  background-color: #3f7f6b;
   color: white;
   font-weight: bold;
   cursor: pointer;
